fix: correct ERC constructor ABI encoding and add TokenEvent transfer op
Three bugs found by comparing with dfns_integration:

1. ERC20 constructor was missing initialSupply param.
   DFNS: (name, symbol, decimals, initialSupply, owner) — 5 params.
   Was encoding only 4. Fixed encodeErc20Constructor to include supply.

2. ERC721 constructor was missing baseURI param.
   DFNS: (name, symbol, baseURI, owner) — 4 params.
   Was encoding only 3. Fixed encodeErc721Constructor to include baseUri.

3. ABI offset calculation was wrong for all constructors.
   abiEncodeStrings() hardcoded offsets for 2 static slots (headSize=64),
   but ERC20 needs headSize=160 (5 slots) and ERC721 needs headSize=128
   (4 slots). String data would land at wrong memory positions on-chain.
   Replaced with per-constructor offset math.

Additional fixes:
- TokenEventService: add 'transfer' operation (transfer(address,uint256))
- TokenEventService: fix burn signature — OZ ERC20Burnable uses burn(uint256),
  not burn(address,uint256); the from address was incorrect
- CreationConsumer: use RawTransaction.createTransaction(chainId,...,to=""...)
  for EIP-1559 contract deployment instead of createContractTransaction()
  which may not have an EIP-1559 overload in web3j 4.12.0
- TokenEventRequestDto: update operation type comment to include transfer

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>